tests/miniJava/neg/005570_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java public java { }
